<resources>

    <!--args name-->
    <string name="arg_details">DetailsArg</string>
    <string name="arg_details_default">Default</string>



    <string name="app_name">NavGraphIssue</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="details_passed_arg">Details Passed Arg</string>
</resources>